# psxdata

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  llms.txt  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md  workflow-test.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  endpoint_change.yml  feature_request.yml  task.yml
.github/workflows/: auto-label-prs.yml  ci.yml  docker-publish.yml  integration.yml  publish.yml  require-issue-link.yml  schema-drift.yml  sync-sdk-docs.yml
api/: dependencies.py  main.py  requirements.txt  schemas.py
api/routers/: __init__.py  health.py  indices.py  market.py  sectors.py  stocks.py
docs/superpowers/plans/: 2026-06-15-phase4-fastapi-rest-layer.md
docs/superpowers/specs/: 2026-06-03-phase4-fastapi-rest-layer-design.md
examples/: quickstart.py
overrides/: main.html
pages/: changelog.md  contributing.md  getting-started.md  index.md
pages/api/: client.md  exceptions.md
pages/guides/: free-psx-api.md  historical-data.md  indices.md  realtime-snapshot.md  sector-analysis.md  stock-screener.md
psxdata/: __init__.py  client.py  constants.py  exceptions.py  utils.py
psxdata/cache/: disk_cache.py
psxdata/parsers/: html.py  normalizers.py
psxdata/scrapers/: base.py  debt_market.py  eligible_scrips.py  fundamentals.py  historical.py  indices.py  realtime.py  screener.py  sectors.py  symbols.py
tests/fixtures/: endpoint_schema.json  historical_engro.html  indices_ALLSHR.html  indices_KSE100.html  screener.html  sector_summary.html  symbols.json  trading_board_REG_bnb.html  trading_board_REG_main.html
tests/integration/: test_debt_market_integration.py  test_eligible_scrips_integration.py  test_fundamentals_integration.py  test_historical_integration.py  test_indices_integration.py  test_integration_expanded.py  test_realtime_integration.py  test_screener_integration.py  test_sectors_integration.py  test_symbols_integration.py
tests/reliability/: test_base_scraper.py  test_client_exceptions.py  test_debt_market.py  test_eligible_scrips.py  test_fundamentals.py  test_historical.py  test_indices.py  test_realtime.py  test_screener.py  test_sectors.py  test_symbols.py
tests/unit/: test_client.py  test_constants.py  test_disk_cache.py  test_exceptions.py  test_html_parser.py  test_normalizers.py  test_probe_diff.py  test_utils.py
tests/unit/api/: test_error_envelope.py  test_health.py  test_indices.py  test_market.py  test_schemas.py  test_sectors.py  test_stocks.py
tools/: capture_fixtures.py  probe_endpoints.py
